init api for programm

--- a/src/shared/lib/i18n/locales/he.json
+++ b/src/shared/lib/i18n/locales/he.json
@@ -85,7 +85,8 @@
     "active": "פעיל",
     "inProgress": "בטיפול",
     "completed": "הושלם",
-    "cancelled": "בוטל"
+    "cancelled": "בוטל",
+    "allPrograms": "כל התוכניות"
   },
   "volunteer": {
     "title": "מתנדב",
