--- a/src/shared/lib/i18n/locales/en.json
+++ b/src/shared/lib/i18n/locales/en.json
@@ -43,7 +43,8 @@
     "active": "Active",
     "inProgress": "In Progress",
     "completed": "Completed",
-    "cancelled": "Cancelled"
+    "cancelled": "Cancelled",
+    "allPrograms": "All Programs"
   },
   "volunteer": {
     "title": "Volunteer",
