--- a/src/shared/lib/i18n/locales/en.json
+++ b/src/shared/lib/i18n/locales/en.json
@@ -169,5 +169,16 @@
   },
   "settings": {
     "title": "Settings"
+  },
+  "categoriesNeedy": {
+    "headerTitle": "How can we help?",
+    "aiPrompt": "Share what happened, and AI will create the task for you to edit and approve before saving.",
+    "searchPlaceholder": "e.g., help with grocery shopping...",
+    "recentTasksTitle": "My Recent Tasks",
+    "categoriesTitle": "Search by Categories",
+    "mostRequestedTitle": "Most requested in the community",
+    "nextButton": "Next",
+    "tabMyTasks": "My Tasks",
+    "tabRequestHelp": "Request Help"
   }
 }
